--- a/hello.html
+++ b/hello.html
@@ -2,10 +2,11 @@
 <html leng="en">
     <head>
         <title>
-            git
+            hello
         </title>
     </head>
     <body>
-        Hello
+        <h1>Welcome to my website! </h1>
+        Hello World
     </body>
 </html>
